# shapelib

./: .clang-format  .cvsignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  ChangeLog  HOWTO-RELEASE  Makefile  Makefile.am  README  README.CMake  README.tree  configure.ac  dbfadd.c  dbfcreate.c  dbfdump.c  dbfopen.c  makefile.vc  makeshape.sh  safileio.c  sbnsearch.c  shapefil.h  shapefil.txt  shapefil_private.h  shapelib.def  shpadd.c  shpcreate.c  shpdump.c  shpopen.c  shprewind.c  shptest.c  shptree.c  shptreedump.c  shputils.c  stream1.out  stream1.sh  stream2.out  stream2.sh  stream3.out
.github/workflows/: main.yml
cmake/: contrib.cmake  shapelib.gta.runsettings.in  shapelib.pc.cmake.in  test.cmake
contrib/: .cvsignore  Makefile  Makefile.am  ShapeFileII.pas  Shape_PointInPoly.cpp  csv2shp.c  dbfcat.c  dbfinfo.c  makefile.vc  my_nan.h  shp2dxf.c  shpcat.c  shpcentrd.c  shpdata.c  shpdxf.c  shpfix.c  shpgeo.c  shpgeo.h  shpinfo.c  shpproj.c  shpsort.c  shpwkb.c
contrib/doc/: Shape_PointInPoly_README.txt  shpsort.txt
contrib/tests/: .cvsignore  expect.out  shpproj.sh
tests/: CMakeLists.txt  dbf_test.cc  expect1.out  expect2.out  expect3.out  sbn_test.cc  shp_bench.cc  shp_test.cc  test1.sh  test2.sh  test3.sh
tests/shape_eg_data/: README.md  mpatch3.dbf  mpatch3.shp  mpatch3.shx
web/: dbf_api.html  index.html  license.html  release.html  shapelib-tools.html  shp_api.html
